Text align correction

--- a/about-text.css
+++ b/about-text.css
@@ -1,11 +1,8 @@
 .about-text {
     font-family: 'Fira Code', sans-serif;
-    font-size: 30px;
-    width: 1280px;
+    font-size: 25px;
     line-height: 1.3;
-    margin-left: 120px;
     Color: #FFFFFF;
-    text-align: justify;
     text-indent: 2em;
 }
 
